fixed issue: Networking page: buttons not aligned #808

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -42,10 +42,6 @@ body {
 }
 
 code {
-  overflow: auto;
-}
-
-code {
   padding: .2rem .5rem;
   margin: 0 .2rem;
   font-size: 90%;
@@ -54,12 +50,6 @@ code {
   border: 1px solid #E1E1E1;
   border-radius: 4px;
   overflow: auto;
-}
-
-pre > code {
-  display: block;
-  padding: 1rem 1.5rem;
-  white-space: pre;
 }
 
 @mixin code-space-full-width {
@@ -772,4 +762,8 @@ blockquote::before {
 
 .download-link {
   color: $link-color;
+}
+
+#pb4 {
+    padding-bottom: 3.8em;
 }
